fix card not showing on creation

--- a/src/styles/_singleOuting.scss
+++ b/src/styles/_singleOuting.scss
@@ -1,7 +1,7 @@
 .so-container {
   margin-top: 50px;
   padding: 20px;
-  background: #CC5500;
+  background: #f0ec1d;
   border-radius: 10px;
   width: 60%;
 }
